[gd_scene load_steps=10 format=3 uid="uid://bkyfmcq1lfiuq"]

[ext_resource type="Script" path="res://scenes/space_shooter/enemies/EnemyDartWing.gd" id="1_o5hbk"]
[ext_resource type="Texture2D" uid="uid://hmegcmdn6f6a" path="res://assets/DartWing.png" id="1_t7wtn"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="3_wjai8"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="4_qkji0"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="5_7ofq6"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="6_5csye"]
[ext_resource type="PackedScene" uid="uid://bl2n6gtfvjhxe" path="res://scenes/space_shooter/space_foliage/PowerUp.tscn" id="7_acqj2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_isf5g"]
radius = 122.016

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s0yj"]
radius = 37.0
height = 112.0

[node name="EnemyDartWing" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(-4, 0)
collision_mask = 0
script = ExtResource("1_o5hbk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.05176e-05, -3.05176e-05)
rotation = 1.57079
scale = Vector2(0.144082, 0.144082)
texture = ExtResource("1_t7wtn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_isf5g")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -51.0
offset_top = -13.0
offset_right = 54.0
offset_bottom = 14.0
step = 0.1
value = 100.0

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("3_wjai8")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("4_qkji0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-11, 0)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_5s0yj")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_7ofq6")
health = 0.0

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("6_5csye")
scene = ExtResource("7_acqj2")

[connection signal="area_entered" from="HurtboxComponent" to="." method="_on_hurtbox_component_hurt"]
